deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-pubsub-svc
spec:
  selector:
    app: api-pubsub
  ports:
    - protocol: TCP
      port: 80
      targetPort:  8090
  type: ClusterIP
